# co_go

./: CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_docker.md  continuation_doc.md
.github/workflows/: cmake-multi-platform.yml  template-janitor.yml
ca2co/: continuation.hpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
co_go/: CMakeLists.txt  callback.hpp  continuation.hpp
co_go/co_go/: CMakeLists.txt  co_go.cpp  co_go.hpp
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
test/: CMakeLists.txt  api_variants.cpp  asio_coro_example.cpp  constexpr_tests.cpp  continuation_test_sync_async.cpp  continuation_test_sync_callback.cpp  tests.cpp
